# Digit_Recognition

./: CMakeCache.txt  CMakeLists.txt  Digit_Recognition  MNIST_reader.cpp  Makefile  Neuron.cpp  Neuron.h  README.md  cmake_install.cmake  main.cpp
headers/: Layer.h  Layer.hpp  MNIST_initializer.hpp  MNIST_reader.h  Network.h  Network.hpp  Neuron.hpp  Training.hpp
headers/network/: Layer.hpp  Network.hpp  Neuron.hpp
headers/training/: Cost_Function.hpp  Gradient_Descent.hpp  Training.hpp
implementation/: Layer.cpp  MNIST_initializer.cpp  MNIST_reader.cpp  Network.cpp  Neuron.cpp  Training.cpp
implementation/network/: Layer.cpp  Network.cpp  Neuron.cpp
implementation/training/: Cost_Function.cpp  Gradient_Descent.cpp  Training.cpp
mnist/: MNISTConfig.cmake
